# sam2-c

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  README.md  SAM2.md  XTENSOR.md  build_macos.sh  test_onnx.sh  test_sam2_ailia.sh  test_sam2_ailia_video.sh  test_sam2_aimol.sh  test_sam2_ryouchinsa.sh
onnxruntime/: CMakeLists.txt
test_onnx/: CMakeLists.txt  main.cpp  mnist.h  util.h
test_sam2_ailia/: CMakeLists.txt  main.cpp
test_sam2_ailia_video/: CMakeLists.txt  main.cpp  main.cppV1.cpp  main.cppV2.cpp  main.cppV3.cpp  onnxruntime_utils.h
test_sam2_aimol/: CMakeLists.txt  main.cpp
test_sam2_ryouchinsa/: CMakeLists.txt  main.cpp
